versioned_docs/version-2025.2.3/professor/fabio_antonio_da_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Fabio Antônio da Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Sociologia I - 1071",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Sociologia II - 1246",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2023B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia III - 1245",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Filosofia I - 1139",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia II - 1232",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Filosofia I - 1139",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Fabio Antônio da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
