versioned_docs/version-2025.2.5/professor/fabio_antonio_da_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Fabio Antônio da Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Sociologia I - 2560",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia I - 2541",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "",
          "students": [
            "IIW2026B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Sociologia II - 2553",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Sociologia II - 2553",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia III - 2548",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Filosofia III - 2548",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_03_-_cr_toledo",
          "students": [
            "IIW2023B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Filosofia II - 2542",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia I - 2541",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia II - 2542",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2024B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Sociologia I - 2560",
          "size": 2,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "",
          "students": [
            "IIW2026B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia I - 2541",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia I - 2541",
          "size": 1,
          "teachers": [
            "Fabio Antônio da Silva"
          ],
          "classroom": "",
          "students": [
            "IIW2026B"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Fabio Antônio da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

